# typhon

./: .gitignore  README.md
attic/hpaxos/: .gitignore
attic/ivy/: bpcon_epr_rewrite_verify.ivy
docs/: fromTLAtoStateright.md
hn-stateright/: Cargo.toml  README.md
hn-stateright/heterogeneous_narwhal/: Cargo.toml
hn-stateright/heterogeneous_narwhal/src/: main.rs
hn-stateright/paradigmatic_actor_system/: Cargo.toml
hn-stateright/paradigmatic_actor_system/src/: main.rs
hpaxos/: .gitignore
hpaxos-tla/: HLearnerGraph_proof.tla  HMessage.tla  HMessage_proof.tla  HPaxos.tla  HPaxos_2.tla  HPaxos_2_proof.tla  README.md
hpaxos/proto/: hpaxosmessage.proto
hpaxos/src/: acceptor_state.rs  configuration.rs  learner.rs  main.rs  message.rs
ivy/: bpcon_epr.ivy  bpcon_fol.ivy  bpcon_lg_epr.ivy  bpcon_lg_fol.ivy  bpcon_log_epr.ivy  bpcon_paxos_epr.ivy  bpcon_paxos_fol.ivy  cex.txt  hpaxos_abstract_epr.ivy  hpaxos_concrete_clean_epr.ivy  hpaxos_concrete_epr.ivy  hpaxos_connect_concrete_epr.ivy  hpaxos_connect_epr.ivy  pcon_epr.ivy  pcon_epr_rewrite_verify.ivy  pcon_fol.ivy  pcon_paxos_epr.ivy  pcon_paxos_epr_rewrite_verify.ivy  pcon_paxos_fol.ivy
ivy/attic/: hpaxos_abstract_epr.ivy
prototype/mempool-types/: Cargo.toml
prototype/mempool-types/src/: main.rs
pubs/: HN.bib  HeterogeneousNarwhal.tex  Makefile  UnicodeReplacements.tex
stateright/: Cargo.toml  build.rs
stateright/src/: acceptor_state.rs  main.rs  message.rs  mod.rs
tla/: AbstractMempoolSpec.tla  AbstractMempoolSpecFinite.tla  AbstractMempoolSpecFiniteApalache.tla  ByzantineDoris.tla  DAGpool.tla  DAGpoolApalacheToyModel.tla  Doris.md  Doris.tla  HLearner.tla  HLearnerGraph.tla  HMessage.tla  HMessage_proof.tla  HPaxos.tla  HPaxosProof.tla  HPaxosTR.tla  HPaxosTR_liveness.tla  HPaxosTR_proof.tla  HPaxos_2.tla  HPaxos_2_proof.tla  HPaxos_chain.tla  HPaxos_chain_2a.tla  HPaxos_chain_2a_proof.tla  HPaxos_chain_proof.tla  HPaxos_liveness.tla  HPaxos_proof.tla  HQuorum.tla  MempoolSpec.md  MempoolSpec.tla  MempoolSpecFinite.tla  Narwhal.tla  Quorums.tla  SubSingletons.tla  WorkersOfPrimaries.tla
(+1608 files in other folders)
