[package]
name = "hpaxos"
version = "0.0.1"
edition = "2018"

[dependencies]
stateright = { git = "https://github.com/stateright/stateright" }
unwrap_or = "1.0.0"
env_logger = "0.7"
lazy_static = "1.4.0"
num_cpus = "1.13"
pico-args = "0.4"
serde_json = "1.0"
tonic = "0.6.0"
prost = "0.9.0"

[build-dependencies]
tonic-build = "0.6.0"
