[package]
name = "heterogeneous_narwhal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
env_logger = "0.7"
serde_json = "1.0"
stateright = "0.29"
ed25519-consensus = "2.0.1"
rand = "0.8.5"
bincode = "1.3.3"
cute = "0.3.0"
serde_bytes = "0.11.8"
serde_derive = "^0.9"
serde-big-array = "0.4.1"
ambassador = "0.3.5"
serde_traitobject = "0.2.8"
num_cpus = "1.0"
