[package]
name = "paradigmatic_actor_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cute = "0.3.0"
env_logger = "0.7"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
serde_json = "1.0"
stateright = "0.29"
