[package]
name = "mempool-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ed25519-consensus = "2.1.0"
lazy_static = "1.4.0"
serde = "1.0.167"
serde-big-array = "0.5.1"
stateright = "0.30.0"
